修改: 优化过时的API